# Rasterizer

./: .gitmodules  CMakeLists.txt  GenerateMakeRelease.sh  README.md  compile.line
mathematica/cubic/: cubicC00.nb  cubicC01.nb  cubicC10.nb  cubicC11.nb
mathematica/linear/: HaarLinearC00.nb  HaarLinearC01.nb  HaarLinearC10.nb  HaarLinearC11.nb
mathematica/mesh/: meshC000.nb  meshC001.nb  meshC010.nb  meshC011.nb  meshC100.nb  meshC101.nb  meshC110.nb  meshC111.nb
mathematica/quadratic/: quadraticC00.nb  quadraticC01.nb  quadraticC10.nb  quadraticC11.nb
src/: CMakeLists.txt
src/Rasterizer/: CMakeLists.txt  QuadTree.cpp  QuadTree.h  Rasterer2d.cpp  Rasterer2d.h  Rasterize2d.cpp  Rasterize2d.h  Tree2PS.cpp  Tree2PS.h  WriteTGA.cpp  WriteTGA.h
src/Test/: CMakeLists.txt  main.cpp  testEval.cpp
